--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <!-- <a href="#hero"> -->
             <h1><span>Banupriya</span></h1>
-          <!-- </a> -->
         </div>
         <div class="nav-list">
           <div class="hamburger">
@@ -40,19 +38,12 @@
 
 
   <!-- Hero Section  -->
-  <section id="hero">
-    <div class="hero container">
-      <div>
-        <h1>Hello, <span></span></h1>
-        <h1>My Name is <span></span></h1>
-        <h1>Banupriya <span></span></h1>
-        <a href="#projects" type="button" class="cta">Portfolio</a>
-      </div>
-    </div>
-    <div class="right">
-      <img src="./images/mypic (2).png" alt="">
-    </div>
-  </section>
+  <h1 class="introo">
+    <a href="" style="color: #bc6ff1" class="typewrite" data-period="2000"
+      data-type='[ "Hi, I am Banupriya.", "I am a Master Of Computer Application Graduate.", "I Love Design.", "I Love to Develop." ]'>
+      <span class="wrap"></span>
+    </a>
+  </h1>
   <!-- End Hero Section  -->
 
   <!-- Service Section -->
@@ -152,7 +143,7 @@
           exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
           Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
           reprehenderit libero enim!</p>
-        <a href="./Banu-resume.pdf" class="cta" download>Download Resume</a>
+        <a href="" class="cta" download>Download Resume</a>
       </div>
     </div>
   </section>
